# clams-python

./: .gitignore  .pytype.cfg  CHANGELOG.md  CONTRIBUTING.md  ISSUE_243_ANALYSIS.md  ISSUE_243_INVESTIGATION.md  ISSUE_243_REAL_WORLD_ANALYSIS.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.dev  requirements.txt  setup.py  test_issue_243.py
build-tools/: build.py  clean.py  docs.py  prep_release.py  publish.py  requirements.docs.txt  test.py
clams/: __init__.py
container/: Containerfile  ffmpeg-hf.containerfile  ffmpeg-hf4.containerfile  ffmpeg-hf5.containerfile  ffmpeg-tf2-hf.containerfile  ffmpeg-tf2.containerfile  ffmpeg-torch.containerfile  ffmpeg-torch2.containerfile  ffmpeg-transformers4.containerfile  ffmpeg.containerfile  generate_containers_yml.py  hf.containerfile  hf4.containerfile  hf5.containerfile  jdk8.containerfile  opencv4-hf.containerfile  opencv4-hf4.containerfile  opencv4-hf5.containerfile  opencv4-tf2-hf.containerfile  opencv4-tf2.containerfile  opencv4-torch.containerfile  opencv4-torch2.containerfile  opencv4-transformers4.containerfile  opencv4.containerfile  tf2-hf.containerfile  tf2.containerfile  torch.containerfile  torch2.containerfile  transformers4.containerfile
docker/: Dockerfile  ffmpeg-tf2.dockerfile  ffmpeg-torch.dockerfile  ffmpeg.dockerfile  opencv4-tf2.dockerfile  opencv4-torch.dockerfile  opencv4.dockerfile  tf2.dockerfile  torch.dockerfile
docs/: .buildinfo  CNAME  appdirectory.html  appmetadata.html  appmetadata.jsonschema  clamsapp.html  cli.html  genindex.html  index.html  index.md  input-output.html  (+9 more)
(+147 files in other folders)
